--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
 <script src="https://raw.githack.com/jeromeetienne/AR.js/2.0.5/aframe/build/aframe-ar.js"></script>
 	</head>
   <body style="margin : 0px; overflow: hidden;">
+	  
     <a-scene embedded arjs>
+		
+<!--
       <a-marker preset="hiro">
           <a-box position="0 0.5 0" material="color: yellow;"></a-box>
       </a-marker>
+		
+-->
+		<a-assets>
+  			<a-asset-item id="model" src="rad/scene.gltf"></a-asset-item>
+		</a-assets>
+<!-- use your gltf model -->
+		<a-entity gltf-model="#tree"></a-entity>
+		
       <a-entity camera></a-entity>
+		
     </a-scene>
+	  
   </body>
 </html>
