--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   			<a-asset-item id="model" src="rad/scene.gltf"></a-asset-item>
 		</a-assets>
 <!-- use your gltf model -->
-		<a-entity gltf-model="#tree"></a-entity>
+		<a-entity gltf-model="#model"></a-entity>
 		
       <a-entity camera></a-entity>
 		
