--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 	  
     <a-scene embedded arjs>
 		
-<!--
+
       <a-marker preset="hiro">
-          <a-box position="0 0.5 0" material="color: yellow;"></a-box>
+<!--           <a-box position="0 0.5 0" material="color: yellow;"></a-box>
       </a-marker>
-		
--->
+		 -->
+
 		<a-assets>
   			<a-asset-item id="model" src="rad/scene.gltf"></a-asset-item>
 		</a-assets>
@@ -21,7 +21,7 @@
 		<a-entity gltf-model="#model"></a-entity>
 		
       <a-entity camera></a-entity>
-		
+	</a-marker>	
     </a-scene>
 	  
   </body>
