--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <a-scene embedded arjs>
 		
 
-      <a-marker preset="hiro">
+      <a-marker preset="hiro"></a-marker>
 <!--           <a-box position="0 0.5 0" material="color: yellow;"></a-box>
       </a-marker>
 		 -->
@@ -19,7 +19,7 @@
 		</a-assets>
 <!-- use your gltf model -->
 		<a-entity gltf-model="#model"></a-entity>
-		</a-marker>
+		
       <a-entity camera></a-entity>
 		
     </a-scene>
