--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <a-scene embedded arjs>
 		
 
-      <a-marker preset="hiro"></a-marker>
+      <a-marker preset="hiro">
 <!--           <a-box position="0 0.5 0" material="color: yellow;"></a-box>
       </a-marker>
 		 -->
@@ -21,7 +21,7 @@
 		<a-entity gltf-model="#model"></a-entity>
 		
       <a-entity camera></a-entity>
-		
+	</a-marker>	
     </a-scene>
 	  
   </body>
